--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -689,8 +689,8 @@ nav {
     .owl-nav {
       position: absolute;
       width: fit-content;
-      top: -60px;
-      right: 0;
+      top: -100px;
+      right: 10px;
       display: flex;
 
       [class*="owl-"] {
@@ -743,7 +743,7 @@ nav {
       color: $txt-color;
       font-size: 16px;
       font-weight: 700;
-      min-height: 60px;
+      //min-height: 60px;
     }
 
     .excerpt {
@@ -1730,6 +1730,8 @@ nav {
       align-items: center;
       border-bottom: unset;
       padding-bottom: 50px;
+      overflow-x: scroll;
+      overflow-y: hidden;
 
       .nav-link {
         background: #C7C7C7;
@@ -1831,6 +1833,54 @@ nav {
         }
       }
     }
+  }
+}
+
+.footer-links {
+  a {
+    color: #636363;
+
+    &:hover {
+      color: $active-color;
+      font-weight: bold;
+    }
+  }
+}
+
+.bottom-footer-list {
+  a {
+    i {
+      color: #636363;
+    }
+
+    &:hover {
+      i {
+        color: $active-color;
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+.footer-contacts {
+  p {
+    color: #636363;
+    display: flex;
+    width: 83%;
+  }
+
+  a {
+    color: #636363;
+
+    &:hover {
+      color: $active-color;
+      font-weight: bold;
+    }
+  }
+
+  .icon-bx {
+    width: 30px;
+    min-width: 30px;
   }
 }
 
@@ -2156,14 +2206,25 @@ nav {
 
   .blog-post {
     background: #F7F7F7;
+    margin-bottom: 10px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
     img {
       transition: ease 0.5s;
     }
 
-    &:hover {
-      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    h5 {
+      line-height: 25px;
+      font-size: 18px;
+      max-height: 50px;
+    }
 
+    .excerpt {
+      line-height: 25px;
+      max-height: 75px;
+    }
+
+    &:hover {
       img {
         transform: rotate(15deg) scale(1.4);
       }
