--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -1106,9 +1106,7 @@ nav a {
     margin: auto;
     align-items: center;
     border-bottom: unset;
-    padding-bottom: 50px;
-    overflow-x: scroll;
-    overflow-y: hidden; }
+    padding-bottom: 50px; }
     .section-products .archive-home nav .nav-link {
       background: #C7C7C7;
       color: white;
@@ -1122,10 +1120,11 @@ nav a {
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25); }
   .section-products .block-products {
     padding-top: 100px;
-    padding-bottom: 200px;
+    padding-bottom: 250px;
     background-color: rgba(228, 65, 38, 0.1); }
   .section-products .block-box .box-technology {
-    padding: 100px 0;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 60px 40px;
     margin-top: -150px;
     margin-bottom: -150px;
     background-color: #DDDDDD;
@@ -1140,7 +1139,7 @@ nav a {
     .section-products .block-box .box-technology .owl-dots {
       bottom: 50px; }
     .section-products .block-box .box-technology ul li {
-      padding: 10px 0;
+      padding: 7px 0;
       font-size: 16px;
       color: #636363;
       font-weight: 500;
