--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1732,15 +1732,29 @@ nav {
       padding-bottom: 50px;
       //overflow-x: scroll;
       //overflow-y: hidden;
-
+      justify-content: center;
+      flex-flow: wrap;
       .nav-link {
         background: #C7C7C7;
         color: white;
-        margin: 0 15px;
+        margin: 5px 25px;
         border-radius: 50px;
         font-size: 14px;
-        padding: 5px 15px;
+        padding: 5px 20px;
         border: unset;
+        position: relative;
+
+        &:not(:first-child):before {
+          content: '';
+          width: 30px;
+          height: 30px;
+          position: absolute;
+          left: -40px;
+          top: 0;
+          background-image: url("../img/item-license.svg");
+          background-repeat: no-repeat;
+          background-position: center;
+        }
 
         &.active, &:hover {
           background: $active-color;
