--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1733,7 +1733,8 @@ nav {
       //overflow-x: scroll;
       //overflow-y: hidden;
       justify-content: center;
-      flex-flow: wrap;
+      flex-flow: row wrap;
+
       .nav-link {
         background: #C7C7C7;
         color: white;
@@ -1744,7 +1745,19 @@ nav {
         border: unset;
         position: relative;
 
-        &:not(:first-child):before {
+        &:nth-child(2n):not(:last-child):after {
+          content: '';
+          width: 30px;
+          height: 30px;
+          position: absolute;
+          right: -40px;
+          top: 0;
+          background-image: url("../img/item-license.svg");
+          background-repeat: no-repeat;
+          background-position: center;
+        }
+
+        &:nth-child(2n):before {
           content: '';
           width: 30px;
           height: 30px;
@@ -1755,6 +1768,18 @@ nav {
           background-repeat: no-repeat;
           background-position: center;
         }
+
+        //&:not(:first-child):before {
+        //  content: '';
+        //  width: 30px;
+        //  height: 30px;
+        //  position: absolute;
+        //  left: -40px;
+        //  top: 0;
+        //  background-image: url("../img/item-license.svg");
+        //  background-repeat: no-repeat;
+        //  background-position: center;
+        //}
 
         &.active, &:hover {
           background: $active-color;
