--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -1108,7 +1108,7 @@ nav a {
     border-bottom: unset;
     padding-bottom: 50px;
     justify-content: center;
-    flex-flow: wrap; }
+    flex-flow: row wrap; }
     .section-products .archive-home nav .nav-link {
       background: #C7C7C7;
       color: white;
@@ -1118,7 +1118,17 @@ nav a {
       padding: 5px 20px;
       border: unset;
       position: relative; }
-      .section-products .archive-home nav .nav-link:not(:first-child):before {
+      .section-products .archive-home nav .nav-link:nth-child(2n):not(:last-child):after {
+        content: '';
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        right: -40px;
+        top: 0;
+        background-image: url("../img/item-license.svg");
+        background-repeat: no-repeat;
+        background-position: center; }
+      .section-products .archive-home nav .nav-link:nth-child(2n):before {
         content: '';
         width: 30px;
         height: 30px;
