--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -891,60 +891,6 @@ nav a {
     .gtcl.invent .icon-top {
       padding: 0 40px; }
 
-@media (max-width: 467px) {
-  .product-row .title-cat {
-    font-size: 24px;
-    font-weight: bold; }
-
-  .list-layout1 .number {
-    margin-left: 0; }
-    .list-layout1 .number.txt-right {
-      margin-right: 0; }
-
-  .list-shop .content-text {
-    padding: 20px;
-    width: 100% !important; }
-    .list-shop .content-text.margin-left, .list-shop .content-text.margin-right {
-      margin-left: 0 !important;
-      margin-right: 0 !important; }
-    .list-shop .content-text a {
-      margin-top: 10px; }
-
-  #banner-bottom {
-    margin-bottom: 0 !important;
-    padding-left: 0 !important; }
-    #banner-bottom .banner-img {
-      overflow: hidden;
-      max-height: 240px;
-      object-fit: cover; }
-
-  #blog-1 {
-    padding-top: 15px !important; }
-
-  .img-absolute img {
-    position: relative !important;
-    width: 100% !important;
-    left: 0 !important; }
-
-  .gtcl {
-    padding-top: 30px; }
-    .gtcl .content {
-      margin-bottom: 20px; }
-
-  .row-bg {
-    padding: 20px 0 !important; }
-    .row-bg:before {
-      width: 100% !important;
-      left: 0 !important; }
-
-  .list-item {
-    -webkit-column-count: 1 !important;
-    -moz-column-count: 1;
-    column-count: 1; }
-    .list-item.column-2 {
-      -webkit-column-count: 1 !important;
-      -moz-column-count: 1;
-      column-count: 1; } }
 .section-title h3 {
   margin-bottom: 0; }
 .section-title h2 {
@@ -1118,8 +1064,6 @@ nav a {
       padding: 5px 20px;
       border: unset;
       position: relative; }
-      .section-products .archive-home nav .nav-link:last-child:before, .section-products .archive-home nav .nav-link:nth-child(7n):before {
-        display: none; }
       .section-products .archive-home nav .nav-link:not(:first-child):before {
         content: '';
         width: 30px;
@@ -1236,7 +1180,7 @@ nav a {
   padding-bottom: 100px;
   padding-top: 100px;
   position: relative;
-  background-image: url("../img/hint-bg.png"), url("../img/w2.png");
+  background-image: url("../img/hint2.png"), url("../img/hint1.png");
   background-size: 50%, 50%;
   background-repeat: no-repeat, no-repeat;
   background-position: right 0 top -12px, left 0 bottom -12px; }
@@ -1456,5 +1400,80 @@ nav a {
     transform: scale(1.1); }
   100% {
     transform: scale(1); } }
+@media (max-width: 467px) {
+  .hero-section {
+    min-height: 170px !important; }
+
+  .section-about {
+    padding-top: 30px;
+    text-align: center; }
+    .section-about:before {
+      display: none; }
+    .section-about h4 {
+      font-size: 25px; }
+    .section-about .video-box {
+      margin-top: 30px; }
+
+  .section-products .block-products {
+    padding-top: 20px; }
+    .section-products .block-products h4 {
+      font-size: 25px; }
+    .section-products .block-products .archive-home a.nav-link:before {
+      display: none;
+      margin: 5px; }
+
+  .product-row .title-cat {
+    font-size: 24px;
+    font-weight: bold; }
+
+  .list-layout1 .number {
+    margin-left: 0; }
+    .list-layout1 .number.txt-right {
+      margin-right: 0; }
+
+  .list-shop .content-text {
+    padding: 20px;
+    width: 100% !important; }
+    .list-shop .content-text.margin-left, .list-shop .content-text.margin-right {
+      margin-left: 0 !important;
+      margin-right: 0 !important; }
+    .list-shop .content-text a {
+      margin-top: 10px; }
+
+  #banner-bottom {
+    margin-bottom: 0 !important;
+    padding-left: 0 !important; }
+    #banner-bottom .banner-img {
+      overflow: hidden;
+      max-height: 240px;
+      object-fit: cover; }
+
+  #blog-1 {
+    padding-top: 15px !important; }
+
+  .img-absolute img {
+    position: relative !important;
+    width: 100% !important;
+    left: 0 !important; }
+
+  .gtcl {
+    padding-top: 30px; }
+    .gtcl .content {
+      margin-bottom: 20px; }
+
+  .row-bg {
+    padding: 20px 0 !important; }
+    .row-bg:before {
+      width: 100% !important;
+      left: 0 !important; }
+
+  .list-item {
+    -webkit-column-count: 1 !important;
+    -moz-column-count: 1;
+    column-count: 1; }
+    .list-item.column-2 {
+      -webkit-column-count: 1 !important;
+      -moz-column-count: 1;
+      column-count: 1; } }
 
 /*# sourceMappingURL=custom.css.map */
