--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1383,86 +1383,6 @@ nav {
 
 }
 
-@media (max-width: 467px) {
-  .product-row .title-cat {
-    font-size: 24px;
-    font-weight: bold;
-  }
-  .list-layout1 {
-    .number {
-      margin-left: 0;
-
-      &.txt-right {
-        margin-right: 0;
-      }
-    }
-
-  }
-  .list-shop {
-    .content-text {
-      padding: 20px;
-      width: 100% !important;
-
-      &.margin-left, &.margin-right {
-        margin-left: 0 !important;
-        margin-right: 0 !important;
-      }
-
-      a {
-        margin-top: 10px;
-      }
-    }
-  }
-
-  #banner-bottom {
-    margin-bottom: 0 !important;
-    padding-left: 0 !important;
-
-    .banner-img {
-      overflow: hidden;
-      max-height: 240px;
-      object-fit: cover;
-    }
-  }
-
-  #blog-1 {
-    padding-top: 15px !important;
-  }
-  .img-absolute {
-    img {
-      position: relative !important;
-      width: 100% !important;
-      left: 0 !important;
-    }
-  }
-  .gtcl {
-    padding-top: 30px;
-
-    .content {
-      margin-bottom: 20px;
-    }
-  }
-  .row-bg {
-    padding: 20px 0 !important;
-
-    &:before {
-      width: 100% !important;
-      left: 0 !important;
-    }
-  }
-  .list-item {
-    -webkit-column-count: 1 !important;
-    -moz-column-count: 1;
-    column-count: 1;
-
-    &.column-2 {
-      -webkit-column-count: 1 !important;
-      -moz-column-count: 1;
-      column-count: 1;
-    }
-  }
-}
-
 .section-title {
   h3 {
     margin-bottom: 0;
@@ -1782,9 +1702,9 @@ nav {
         //  background-position: center;
         //}
 
-        &:last-child:before, &:nth-child(7n):before {
-          display: none;
-        }
+        //&:last-child:before {
+        //  display: none;
+        //}
 
         &:not(:first-child):before {
           content: '';
@@ -2073,7 +1993,7 @@ nav {
   //background-position-y: -30px;
   //background-size: 200px;
 
-  background-image: url("../img/hint-bg.png"), url("../img/w2.png");
+  background-image: url("../img/hint2.png"), url("../img/hint1.png");
   background-size: 50%, 50%;
   background-repeat: no-repeat, no-repeat;
   background-position: right 0 top -12px, left 0 bottom -12px;
@@ -2494,5 +2414,123 @@ nav {
   }
   100% {
     transform: scale(1.0);
+  }
+}
+
+@media (max-width: 467px) {
+  .hero-section {
+    min-height: 170px !important;
+  }
+  .section-about {
+    padding-top: 30px;
+
+    &:before {
+      display: none;
+    }
+
+    h4 {
+      font-size: 25px;
+    }
+
+    text-align: center;
+
+    .video-box {
+      margin-top: 30px;
+    }
+  }
+  .section-products {
+    .block-products {
+      padding-top: 20px;
+
+      h4 {
+        font-size: 25px;
+      }
+
+      .archive-home {
+        a.nav-link {
+          &:before {
+            display: none;
+            margin: 5px;
+          }
+        }
+      }
+    }
+  }
+  .product-row .title-cat {
+    font-size: 24px;
+    font-weight: bold;
+  }
+  .list-layout1 {
+    .number {
+      margin-left: 0;
+
+      &.txt-right {
+        margin-right: 0;
+      }
+    }
+
+  }
+  .list-shop {
+    .content-text {
+      padding: 20px;
+      width: 100% !important;
+
+      &.margin-left, &.margin-right {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+      }
+
+      a {
+        margin-top: 10px;
+      }
+    }
+  }
+
+  #banner-bottom {
+    margin-bottom: 0 !important;
+    padding-left: 0 !important;
+
+    .banner-img {
+      overflow: hidden;
+      max-height: 240px;
+      object-fit: cover;
+    }
+  }
+
+  #blog-1 {
+    padding-top: 15px !important;
+  }
+  .img-absolute {
+    img {
+      position: relative !important;
+      width: 100% !important;
+      left: 0 !important;
+    }
+  }
+  .gtcl {
+    padding-top: 30px;
+
+    .content {
+      margin-bottom: 20px;
+    }
+  }
+  .row-bg {
+    padding: 20px 0 !important;
+
+    &:before {
+      width: 100% !important;
+      left: 0 !important;
+    }
+  }
+  .list-item {
+    -webkit-column-count: 1 !important;
+    -moz-column-count: 1;
+    column-count: 1;
+
+    &.column-2 {
+      -webkit-column-count: 1 !important;
+      -moz-column-count: 1;
+      column-count: 1;
+    }
   }
 }
