--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2447,7 +2447,18 @@ nav {
       }
 
       .archive-home {
+        nav {
+          margin-bottom: 20px;
+        }
+
         a.nav-link {
+          width: 45%;
+          text-align: center;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          margin: 5px;
+
           &:before {
             display: none;
             margin: 5px;
@@ -2455,6 +2466,65 @@ nav {
         }
       }
     }
+
+    .block-box {
+      .box-technology {
+        padding: 15px;
+
+        h4 {
+          font-size: 25px;
+        }
+      }
+    }
+  }
+  .section-license {
+    padding-bottom: 50px;
+    h4 {
+      font-size: 18px;
+    }
+
+    .license-item {
+      margin-top: 50px;
+    }
+
+    .invention-carousel {
+      .owl-prev {
+        right: 90% !important;
+      }
+
+      .owl-next {
+        left: 90% !important;
+      }
+    }
+
+  }
+  .section-seeding {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    .item-newspaper {
+      width: 100%;
+    }
+    .owl-dots{
+      bottom: 25px;
+    }
+    .guest{
+      margin-top: 50px;
+    }
+  }
+  .section-why{
+    padding: 50px 0;
+    text-align: left!important;
+    h4{
+      font-size: 23px;
+      margin: 20px 0;
+      text-align: left;
+    }
+    .item-why{
+      margin-bottom: 20px;
+    }
+  }
+  .blog-post .blog-post-txt{
+    padding: 10px;
   }
   .product-row .title-cat {
     font-size: 24px;
