--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2523,6 +2523,14 @@ nav {
       margin-bottom: 20px;
     }
   }
+  .section-blog{
+    h4{
+      font-size: 25px;
+    }
+    .owl-nav{
+      top: -80px!important;
+    }
+  }
   .blog-post .blog-post-txt{
     padding: 10px;
   }
