--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1808,6 +1808,38 @@ nav {
           }
         }
       }
+
+      .tech-img {
+        position: relative;
+
+        .tech-content {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          bottom: 0;
+          display: flex;
+          align-items: center;
+          left: 0;
+          padding: 15px;
+          background: rgba(0, 0, 0, 0.5);
+          p, span, b {
+            font-family: arial, sans-serif;
+            color: white;
+            border: none;
+          }
+
+          ul {
+            list-style: disc;
+            padding-left: 20px;
+
+            li, p, span, b {
+              font-family: arial, sans-serif;
+              color: white;
+              border: none;
+            }
+          }
+        }
+      }
     }
   }
 }
