--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -539,7 +539,9 @@ nav a {
   background-repeat: no-repeat;
   padding-top: 100px; }
   .contact-bg h1 {
-    font-size: 75px; }
+    font-size: 40px; }
+  .contact-bg p {
+    font-size: 16px; }
 
 #main-thumb {
   max-height: 530px;
