--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -837,6 +837,8 @@ nav {
 }
 
 .contact-bg {
+  padding-bottom: 50px;
+  background-position: center;
   margin-top: 80px;
   background-image: url('../img/bg/contact.jpg');
   background-size: cover;
