--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -916,7 +916,7 @@ nav a {
   font-size: 14px; }
 
 .list-logo .img {
-  width: 100%;
+  width: 150px;
   height: 150px;
   display: flex;
   overflow: hidden;
