--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -1048,7 +1048,7 @@ nav a {
     background: #E44126; }
 
 .section-products {
-  background-image: url("../img/bgpartent.png");
+  background-image: url("../img/bgpartent.jpg");
   background-repeat: repeat;
   background-size: cover; }
   .section-products h4 {
