--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1648,7 +1648,7 @@ nav {
 }
 
 .section-products {
-  background-image: url("../img/bgpartent.png");
+  background-image: url("../img/bgpartent.jpg");
   background-repeat: repeat;
   background-size: cover;
 
