--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -97,26 +97,6 @@ h1, h2, h3 {
 html, body, h1, h2, h3, h4, h5, h6 {
   font-family: 'Red Rose', cursive; }
 
-.wsmenucontainer {
-  position: relative; }
-  .wsmenucontainer:before {
-    position: absolute;
-    content: "";
-    width: 30%;
-    height: 12%;
-    background-image: url("../img/lahint.png");
-    background-size: 100%;
-    background-repeat: no-repeat; }
-  .wsmenucontainer:before {
-    top: 500px;
-    right: 0;
-    z-index: 2;
-    background-position-x: left;
-    background-position-y: bottom;
-    -webkit-transform: rotate(-180deg);
-    -moz-transform: rotate(-180deg);
-    transform: rotate(-180deg); }
-
 .footer {
   z-index: 3; }
   .footer h6 {
@@ -1179,6 +1159,10 @@ nav a {
   padding-top: 240px;
   padding-bottom: 100px;
   z-index: 1; }
+  .section-license.no-bg {
+    background: none;
+    padding-top: 0;
+    padding-bottom: 50px; }
   .section-license .invention-carousel .owl-nav {
     position: absolute;
     top: 0;
@@ -1356,6 +1340,23 @@ nav a {
   padding-top: 120px;
   padding-bottom: 120px;
   position: relative; }
+  .section-about:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/lahint.png");
+    background-size: 20%;
+    background-repeat: no-repeat; }
+  .section-about:after {
+    top: -30px;
+    right: 0;
+    z-index: -1;
+    background-position-x: left;
+    background-position-y: bottom;
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    transform: rotate(-180deg); }
   .section-about:before {
     position: absolute;
     content: '';
