--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -1451,6 +1451,10 @@ nav a {
   100% {
     transform: scale(1); } }
 @media (max-width: 467px) {
+  .item-product-home .img {
+    max-height: 100%;
+    height: 100%; }
+
   .bottom-footer-list p:after {
     display: none; }
   .bottom-footer-list i {
