--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2462,6 +2462,12 @@ nav {
 }
 
 @media (max-width: 467px) {
+  .item-product-home {
+    .img {
+      max-height: 100%;
+      height: 100%;
+    }
+  }
   .bottom-footer-list {
     p {
       &:after {
