--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -1603,5 +1603,16 @@ nav a {
       -webkit-column-count: 1 !important;
       -moz-column-count: 1;
       column-count: 1; } }
+.scrollbar-macos::-webkit-scrollbar {
+  background-color: #fff;
+  width: 16px; }
+.scrollbar-macos::-webkit-scrollbar-track {
+  background-color: #fff; }
+.scrollbar-macos::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  border-radius: 16px;
+  border: 4px solid #fff; }
+.scrollbar-macos::-webkit-scrollbar-button {
+  display: none; }
 
 /*# sourceMappingURL=custom.css.map */
