--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2720,18 +2720,18 @@ nav {
 
 .scrollbar-macos {
   &::-webkit-scrollbar {
-    background-color: #fff;
+    background-color: transparent;
     width: 16px;
   }
 
   &::-webkit-scrollbar-track {
-    background-color: #fff;
+    background-color: transparent;
   }
 
   &::-webkit-scrollbar-thumb {
     background-color: #babac0;
     border-radius: 16px;
-    border: 4px solid #fff;
+    border: 4px solid transparent;
   }
 
   &::-webkit-scrollbar-button {
