--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1771,7 +1771,7 @@ nav {
 
       ul {
         max-height: 300px;
-        overflow-y: scroll;
+        overflow-y: auto;
 
         li {
           padding: 7px 0;
