--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -1086,7 +1086,7 @@ nav a {
       bottom: 50px; }
     .section-products .block-box .box-technology ul {
       max-height: 300px;
-      overflow-y: scroll; }
+      overflow-y: auto; }
       .section-products .block-box .box-technology ul li {
         padding: 7px 0;
         font-size: 16px;
