--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -1197,7 +1197,7 @@ nav a {
   padding-bottom: 100px;
   padding-top: 100px;
   position: relative;
-  background-image: url("../img/hint2.png"), url("../img/hint1.png");
+  background-image: url("../img/hint2.jpg"), url("../img/hint1.jpg");
   background-size: 50%, 50%;
   background-repeat: no-repeat, no-repeat;
   background-position: right 0 top -12px, left 0 bottom -12px; }
