--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;500;700&display=swap');
 
+//@font-face {
+//  src: url("../fonts/RedRose-VariableFont_wght.ttf") format('truetype');
+//  font-family: "Red Rose";
+//}
+
 $icon-color: #636363;
 $active-color: #E44126;
 $pink: #F16687;
@@ -2019,7 +2024,7 @@ nav {
   padding-bottom: 100px;
   padding-top: 100px;
   position: relative;
-  background-image: url("../img/hint2.png"), url("../img/hint1.png");
+  background-image: url("../img/hint2.jpg"), url("../img/hint1.jpg");
   background-size: 50%, 50%;
   background-repeat: no-repeat, no-repeat;
   background-position: right 0 top -12px, left 0 bottom -12px;
