--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2024,7 +2024,7 @@ nav {
   padding-bottom: 100px;
   padding-top: 100px;
   position: relative;
-  background-image: url("../img/hint2.jpg"), url("../img/hint1.jpg");
+  background-image: url("https://admin.janami.vn/img/hint2.jpg"), url("https://admin.janami.vn/img/hint1.jpg");
   background-size: 50%, 50%;
   background-repeat: no-repeat, no-repeat;
   background-position: right 0 top -12px, left 0 bottom -12px;
