--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2407,6 +2407,26 @@ nav {
   font-size: 18px;
 }
 
+.thumb-item {
+  &.active {
+    img {
+      border: 1px solid #E44126;
+      border-radius: 3px;
+      position: relative;
+
+      &:before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: rgba(0, 0, 0, 0.3);
+      }
+    }
+  }
+}
+
 .white-menu {
   .wsmainfull {
     background-color: transparent !important;
@@ -2724,9 +2744,21 @@ nav {
 }
 
 .scrollbar-macos {
+  overflow-y: scroll;
+
   &::-webkit-scrollbar {
     background-color: transparent;
     width: 6px;
+  }
+
+  &:hover {
+    &::-webkit-scrollbar-thumb {
+      background-color: #babac0;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: #babac0;
+    }
   }
 
   &::-webkit-scrollbar-track {
@@ -2734,7 +2766,8 @@ nav {
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: #babac0;
+    //background-color: #babac0;
+    background-color: transparent;
     border-radius: 6px;
     border: 2px solid transparent;
   }
